# diploma

./: README.md  READme.md  discursive_features.py  feat_extraction_final_pipline.py  final_pipline.py  get_transcription.py  lexical_features.py  morphological_features.py  nlp_pipeline.py  pyproject.toml  requirements.txt  spectral_characteristics.py  syntactical_features.py  verbal_fluency.py
data/: 02.2023_participant.data.xlsx  data_and_vital_statistics.ipynb  get_statistics.ipynb  results_analysis.xlsx
data/.ipynb_checkpoints/: significant_vars-checkpoint.txt
models/RuT5_GEC/: tokenizer.json  tokenizer_config.json
models/shico_model/: best_stacking_model.joblib  final_pipline.csv
models/shico_model/.ipynb_checkpoints/: model-checkpoint.ipynb
